nullaway_error_379D3900-E7B9-4B72-B1AB-2F79A888B647.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/FrameworkServlet.java:1210: error: [NullAway] dereferenced expression webRequest is @Nullable
			HttpServletRequest request = webRequest.getNativeRequest(HttpServletRequest.class);
			                                       ^
    (see http://t.uber.com/nullaway )
